--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.4",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
